
syntax = "proto3";

// Path:
// interfaces/interface/ethernet[name=Ethernet16]/state/addresses

package mt.proto;

message AddressesAddress {
    string interface = 1;
    string addr = 2;
    string scope = 3;
    string family = 4;
}